--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -13,6 +13,9 @@ body {
   margin: 0;
   padding: 0;
 }
+section {
+  min-height: 70vh
+}
 .btn-click:active {
   outline: none !important;
   box-shadow: none !important;
@@ -37,8 +40,17 @@ section p{
   text-decoration: none;
   color: var(--main-color)!important;
 }
-.main-hover:hover{
-  color: var(--main-color)!important;
+
+.main-hover,
+.main-hover a{
+  color: #000 !important;
+  text-decoration: none;
+}
+.main-hover:hover,
+.main-hover:hover a{
+  color: #fff!important;
+  text-decoration: none;
+
 }
 
 /* Navbar */
@@ -79,7 +91,7 @@ section p{
 .collection-img img {
   width: 100%;
   height: 300px;
-  object-fit: contain;
+  object-fit: cover;
   transition: transform 0.3s ease-in-out; 
 
 }
@@ -137,7 +149,41 @@ section p{
 /* Blog */
 .blog-img {
   height: 280px !important; 
+  min-height: 280px !important;
   width: 100% !important;
   object-fit: cover !important; 
 }
 
+
+/* Modal Upload */
+.image-preview-wrapper {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.delete-icon {
+  font-size: 35px;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  color: white;
+  padding: 5px;
+  cursor: pointer;
+  display: none;
+}
+
+.image-preview-wrapper:hover .delete-icon {
+  display: block;
+}
+
+.image-preview-wrapper:hover img {
+  opacity: 0.6;
+
+}
+
+.image-preview-wrapper img {
+  max-width: 100%;
+  height: auto;
+}
