--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/futura-std-4');
 :root {
   --lg-font: 'Kaisei Tokumin', serif;
   --sm-font: 'Poppins', sans-serif;
+  --price-font: "Futura", sans-serif;
   --main-color: #d3ad7f;
   --black: #13131a;
   --pink: #e5345b;
@@ -12,6 +13,7 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: var(--price-font) !important;
 }
 section {
   min-height: 70vh
@@ -31,6 +33,7 @@ section p{
 }
 .price{
   color: #d52220;
+  font-family: var(--price-font);
 }
 .title-product{
   text-decoration: none;
@@ -90,8 +93,8 @@ section p{
 }
 .collection-img img {
   width: 100%;
-  height: 300px;
-  object-fit: cover;
+  max-height: 310px;
+  object-fit: contain;
   transition: transform 0.3s ease-in-out; 
 
 }
@@ -103,14 +106,15 @@ section p{
   transition: transform 0.3s ease-in-out; /* Điều chỉnh thời gian di chuyển */
 }
 
-.list-enter-active, .list-leave-active {
+.list-enter-active, 
+.list-leave-active {
   transition: opacity 0.3s ease-in-out, transform 0.3s ease; /* Cả khi xuất hiện và biến mất */
 }
 
 .list-enter {
   opacity: 0;
   transform: scale(0.1); /* Xuất hiện với scale nhỏ và lớn dần */
-  transition : transform 2s ease-in-out; /* Điều chỉnh thời gian di chuyển */
+  transition : transform 0.2s ease-in-out; /* Điều chỉnh thời gian di chuyển */
 }
 
 .list-enter-to {
