--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -39,6 +39,10 @@ section p{
 .price{
   color: #d52220 !important;
   font-family: var(--sm-font) !important;
+}
+.price-old{
+  text-decoration: line-through;
+  font-family: var(--sm-font) !important;
 
 }
 .topic-title >h2{
@@ -67,6 +71,18 @@ section p{
   color: #fff!important;
   text-decoration: none;
 
+}
+.discount-label {
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  background-color: #e60000; 
+  color: #fff; 
+  font-size: 14px; 
+  font-weight: bold; 
+  padding: 5px 10px; 
+  border-radius: 5px; 
+  z-index: 99; 
 }
 
 /* Navbar */
@@ -203,4 +219,32 @@ section p{
 .image-preview-wrapper img {
   max-width: 100%;
   height: auto;
+}
+
+.fire-icon {
+  top: 0px;
+  left: 0px;
+  color: #ff4500;
+  font-size: 18px;
+  animation: fire-flicker 1s infinite;
+}
+
+@keyframes fire-flicker {
+  0% {
+      transform: scale(1);
+      opacity: 1;
+      color: #ff4500;
+  }
+
+  50% {
+      transform: scale(1.2);
+      opacity: 0.8;
+      color: #f8b500;
+  }
+
+  100% {
+      transform: scale(1);
+      opacity: 1;
+      color: #a52c00;
+  }
 }
